[package]
name = "todo_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
crossterm = "0.27.0"
ratatui = "0.25.0"
rusqlite = { version = "0.30.0", features = ["bundled", "uuid"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "macro-diagnostics"] }

[profile.dev.package.backtrace]
opt-level = 3